# file-finder

./: .gitignore  Cargo.toml  README.md
benches/: search_benchmark.rs
src/: cli.rs  display.rs  finder.rs  lib.rs  main.rs  tui.rs
tests/: finder_test.rs
